Fix VirtualTour marks. Improve click to add when slightly dragged button. Fix border-radius overflow issue. Fix fullscreen white screen issue.

--- a/_editor/components/canvas/editor_box/_editorBox.scss
+++ b/_editor/components/canvas/editor_box/_editorBox.scss
@@ -19,7 +19,7 @@
 .boxStyle {
   position: relative;
   word-wrap: break-word;
-  //overflow: hidden;
+  overflow: hidden;
   pre, pre * {
     word-break: break-all !important;
     white-space: pre-wrap;
