--- a/_editor/components/nav_bar/plugin_ribbon/_pluginRibbon.scss
+++ b/_editor/components/nav_bar/plugin_ribbon/_pluginRibbon.scss
@@ -13,6 +13,12 @@
   height: auto;
 }
 
+@media screen and (max-width: 1147px) {
+  #ribbonRow {
+    min-width: 230px;
+  }
+}
+
 /*Ribbon Column*/
 #ribbon {
   padding: 0;
